--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -2,3 +2,5 @@ invalidAbsoluteTypeName = warning
 invalidWildcardTypeName = ignore
 
 unresolvableMember = warning
+
+typeNotExposedToWeaver = warning
