fix for Bugzilla Bug 41952    XLint warning for call PCD's using subtype of defining type
also added extraSourceLocations to IMessage+ for
message with multiple source lines

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -6,3 +6,5 @@ unresolvableMember = warning
 typeNotExposedToWeaver = warning
 
 shadowNotInStructure = ignore
+
+unmatchedSuperTypeInCall = warning
