--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -6,3 +6,5 @@ unresolvableMember = warning
 typeNotExposedToWeaver = warning
 
 shadowNotInStructure = ignore
+
+unmatchedSuperTypeInCall = warning
