Implemented feature for Bugzilla Bug 48091    Lazy instantiation of thisJoinPoint Speed-ups of 10-100X are measured even when running a small test case with minimal GC issues.
The actual feature implemented is that thisJoinPoint objects are only created just before calling the method for advice that requires them.  To take advantage of this feature you must use an if PCD or some other dynamic test that occurs in the PCD not the advice body to guard the expensive creation of the thisJoinPoint object.

-XlazyTjp flag must be passed to compiler to enable this feature.
If any around advice is present on the joinpoint then lazy instantiation
will be disabled.  An Xlint warning will be displayed in this case.

As a related optimization, several helper methods were added to
Factory.makeJP to reduce the code size when thisJoinPoint is used.

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -8,3 +8,5 @@ typeNotExposedToWeaver = warning
 shadowNotInStructure = ignore
 
 unmatchedSuperTypeInCall = warning
+
+canNotImplementLazyTjp = warning
