--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -8,3 +8,5 @@ typeNotExposedToWeaver = warning
 shadowNotInStructure = ignore
 
 unmatchedSuperTypeInCall = warning
+
+canNotImplementLazyTjp = warning
