Fix for Bugzilla Bug 41181    Support SerialVersionUID field if no new fields declared on class

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -10,3 +10,6 @@ shadowNotInStructure = ignore
 unmatchedSuperTypeInCall = warning
 
 canNotImplementLazyTjp = warning
+
+needsSerialVersionUIDField = ignore
+brokeSerialVersionCompatibility = ignore
