--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -10,3 +10,6 @@ shadowNotInStructure = ignore
 unmatchedSuperTypeInCall = warning
 
 canNotImplementLazyTjp = warning
+
+needsSerialVersionUIDField = ignore
+brokeSerialVersionCompatibility = ignore
