fix for Bug 60936    error message for constructor-execution pcd

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -13,3 +13,5 @@ canNotImplementLazyTjp = warning
 
 needsSerialVersionUIDField = ignore
 brokeSerialVersionCompatibility = ignore
+
+noInterfaceCtorJoinpoint = warning
