--- a/branches/ajdt_support/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/branches/ajdt_support/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -13,3 +13,5 @@ canNotImplementLazyTjp = warning
 
 needsSerialVersionUIDField = ignore
 brokeSerialVersionCompatibility = ignore
+
+noInterfaceCtorJoinpoint = warning
