--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -56,7 +56,7 @@ itdMemberConflict=inter-type declaration from {0} conflicts with existing member
 nonVoidReturn=applying to join point that doesn't return void: {0}
 incompatibleReturnType=incompatible return type applying to {0}
 cantThrowChecked=can''t throw checked exception ''{0}'' at this join point ''{1}''
-circularDependency=can''t determine precedence between two or more pieces of advice that apply the same join point: {0}
+circularDependency=can''t determine precedence between two or more pieces of advice that apply to the same join point: {0}
 
 # aspect messages..
 missingPerClause=expected per clause on super aspect not found on {0}
