Starting the quest to rid the world of unhelpful 'cant find type' messages... around 15down...

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -72,6 +72,7 @@ aspectNeeded=aspect {0} is needed when using type {1}
 
 # The infamous and deserving a category all of its own...
 cantFindType=can''t find type {0}
+cantFindCoreType=can''t find critical required type {0}
 
 # Implementation limitations...
 decpBinaryLimitation=can''t use declare parents to change superclass of binary form ''{0}'' (implementation limitation)
