--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -73,6 +73,7 @@ aspectNeeded=aspect {0} is needed when using type {1}
 # The infamous and deserving a category all of its own...
 cantFindType=can''t find type {0}
 cantFindCoreType=can''t find critical required type {0}
+cantFindTypeWithinpcd=Unable to find type {0} whilst processing within() pointcut at this source location
 
 # Implementation limitations...
 decpBinaryLimitation=can''t use declare parents to change superclass of binary form ''{0}'' (implementation limitation)
