fix for Bugzilla Bug 59208  	Weaver fails in BCEL for large classe

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -87,6 +87,7 @@ aroundOnInterfaceStaticInit=around on staticinitialization of interface ''{0}'' 
 
 # Bytecode generation nasties...
 problemGeneratingMethod=problem generating method {0}.{1} : {2}
+classTooBig=The class {0} exceeds the maximum class size supported by the JVM (constant pool too big).
 
 # Classpath messages
 zipfileEntryMissing=zipfile classpath entry does not exist: {0}
