--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -93,6 +93,7 @@ classTooBig=The class {0} exceeds the maximum class size supported by the JVM (c
 zipfileEntryMissing=zipfile classpath entry does not exist: {0}
 zipfileEntryInvalid=zipfile classpath entry is invalid: {0} <{1}>
 directoryEntryMissing=directory classpath entry does not exist: {0}
+outjarInInputPath=-outjar cannot be a member of -injars, -inpath or -aspectpath
 
 # Lint messages
 problemLoadingXLint=problem loading Xlint properties file: {0}, {1}
