Fix and testcase for Bugzilla Bug 49657 	  	Weaver results in rt error if affected base class not exposed

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -51,6 +51,7 @@ overriddenStatic={0} cannot override {1}; overridden method is static
 overridingStatic={0} cannot override {1}; overriding method is static
 itdConflict=intertype declaration from {0} conflicts with intertype declaration: {1} from {2}
 itdMemberConflict=inter-type declaration from {0} conflicts with existing member: {1}
+itdNonExposedImplementor=type {0} must be accessible for weaving interface inter type declaration from aspect {1}
 
 # advice messages...
 nonVoidReturn=applying to join point that doesn't return void: {0}
