--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -52,6 +52,7 @@ overridingStatic={0} cannot override {1}; overriding method is static
 itdConflict=intertype declaration from {0} conflicts with intertype declaration: {1} from {2}
 itdMemberConflict=inter-type declaration from {0} conflicts with existing member: {1}
 itdNonExposedImplementor=type {0} must be accessible for weaving interface inter type declaration from aspect {1}
+itdAbstractMustBePublicOnInterface=abstract intertype method declaration ''{0}'' on interface {1} must be declared public (compiler limitation)
 
 # advice messages...
 nonVoidReturn=applying to join point that doesn't return void: {0}
