Two more "cant find types" dealt with.

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -76,6 +76,8 @@ aspectNeeded=aspect {0} is needed when using type {1}
 cantFindType=can''t find type {0}
 cantFindCoreType=can''t find critical required type {0}
 cantFindTypeWithinpcd=Unable to find type {0} whilst processing within() pointcut at this source location
+cftDuringAroundWeave=Can't find type {0} whilst applying around advice
+cftDuringAroundWeavePreinit=Can't find type {0} whilst applying around advice to preinitialization join point
 
 # Implementation limitations...
 decpBinaryLimitation=can''t use declare parents to change superclass of binary form ''{0}'' (implementation limitation)
