--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -78,6 +78,8 @@ cantFindCoreType=can''t find critical required type {0}
 cantFindTypeWithinpcd=Unable to find type {0} whilst processing within() pointcut at this source location
 cftDuringAroundWeave=Can't find type {0} whilst applying around advice
 cftDuringAroundWeavePreinit=Can't find type {0} whilst applying around advice to preinitialization join point
+cftExceptionType=Can't find exception type {0} whilst processing advice
+cftArgType=Can't find type {0} whilst processing args() pcd
 
 # Implementation limitations...
 decpBinaryLimitation=can''t use declare parents to change superclass of binary form ''{0}'' (implementation limitation)
