--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -15,3 +15,5 @@ needsSerialVersionUIDField = ignore
 brokeSerialVersionCompatibility = ignore
 
 noInterfaceCtorJoinpoint = warning
+
+noJoinpointsForBridgeMethods = warning
