Part of 72766: Bridge methods - we now do the right thing if we see one (i.e. we ignore it as a source of join points)

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -15,3 +15,5 @@ needsSerialVersionUIDField = ignore
 brokeSerialVersionCompatibility = ignore
 
 noInterfaceCtorJoinpoint = warning
+
+noJoinpointsForBridgeMethods = warning
