72766 - varargs policing in signature matching

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -17,3 +17,5 @@ brokeSerialVersionCompatibility = ignore
 noInterfaceCtorJoinpoint = warning
 
 noJoinpointsForBridgeMethods = warning
+
+cantMatchArrayTypeOnVarargs = ignore
