--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -17,3 +17,5 @@ brokeSerialVersionCompatibility = ignore
 noInterfaceCtorJoinpoint = warning
 
 noJoinpointsForBridgeMethods = warning
+
+cantMatchArrayTypeOnVarargs = ignore
