--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -120,4 +120,5 @@ itdcOnAnnotationNotAllowed=can''t make inter-type constructor declarations on an
 itdmOnAnnotationNotAllowed=can''t make inter-type method declarations on annotation types
 itdfOnAnnotationNotAllowed=can''t make inter-type field declarations on annotation types
 
+referenceToNonAnnotationType=Type referred to is not an annotation type: {0}
 
