--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -121,4 +121,4 @@ itdmOnAnnotationNotAllowed=can''t make inter-type method declarations on annotat
 itdfOnAnnotationNotAllowed=can''t make inter-type field declarations on annotation types
 
 referenceToNonAnnotationType=Type referred to is not an annotation type: {0}
-
+bindingNonRuntimeRetentionAnnotation=Annotation type {0} does not have runtime retention
