All the new enum/annotation messages

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -114,11 +114,17 @@ invalidXLintMessageKind=invalid Xlint message kind (must be one of ignore, warni
 itdcOnEnumNotAllowed=can''t make inter-type constructor declarations on enum types
 itdmOnEnumNotAllowed=can''t make inter-type method declarations on enum types
 itdfOnEnumNotAllowed=can''t make inter-type field declarations on enum types
+cantDecpOnEnumToImplInterface=can''t use declare parents to make enum type {0} implement an interface
+cantDecpOnEnumToExtendClass=can''t use declare parents to alter supertype of enum type {0}
+cantDecpToMakeEnumSupertype=can''t use declare parents to make ''java.lang.Enum'' the parent of type {0}
 
-# Enum
+# Annotation
 itdcOnAnnotationNotAllowed=can''t make inter-type constructor declarations on annotation types
 itdmOnAnnotationNotAllowed=can''t make inter-type method declarations on annotation types
 itdfOnAnnotationNotAllowed=can''t make inter-type field declarations on annotation types
+cantDecpOnAnnotationToImplInterface=can''t use declare parents to make annotation type {0} implement an interface
+cantDecpOnAnnotationToExtendClass=can''t use declare parents to alter supertype of annotation type {0}
+cantDecpToMakeAnnotationSupertype=can''t use declare parents to make ''java.lang.annotation.Annotation'' the parent of type {0}
 
 referenceToNonAnnotationType=Type referred to is not an annotation type: {0}
 bindingNonRuntimeRetentionAnnotation=Annotation type {0} does not have runtime retention
