annotation/enum xlints

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/XlintDefault.properties
@@ -17,5 +17,6 @@ brokeSerialVersionCompatibility = ignore
 noInterfaceCtorJoinpoint = warning
 
 noJoinpointsForBridgeMethods = warning
-
 cantMatchArrayTypeOnVarargs = ignore
+enumAsTargetForDecpIgnored = warning
+annotationAsTargetForDecpIgnored = warning
