partial fix for bug 61568. These changes are both (a) a performance optimization, and (b) an improvement on the binding across || rules that we implemented in 1.2.1. Instead of saying the the first binding in a left-to-right traversal of the pointcuts DNF is the one that you get (too much to ask users to do DNF rewriting in their heads), this version implements the rule that every || branch in the DNF must bind all formals, and if two || branches can have any join points in common (can match join points of the same kind), then both must bind all formals identically.
So it allows things like execution(* *(..)) && args(x) || call(* *(..)) && this(x)
which previously we used to forbid.

But primarily it turned out to be a performance optimization.

--- a/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -108,6 +108,12 @@ errorLoadingXLintDefault=problem loading XlintDefault.properties, {0}
 invalidXLintKey=invalid Xlint key: {0}
 invalidXLintMessageKind=invalid Xlint message kind (must be one of ignore, warning, error): {0}
 
+# Binding of formals
+unboundFormalInPC=the parameter {0} is not bound in [all branches of] pointcut
+ambiguousBindingInPC=the binding of parameter {0} is ambiguous in pointcut
+ambiguousBindingInOrPC=ambiguous binding of parameter(s) {0} across ''||'' in pointcut
+negationDoesntAllowBinding=cannot bind a parameter in a negated expression
+
 # Java5 
 
 # Enum
