--- a/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
+++ b/trunk/org.aspectj/modules/weaver/src/org/aspectj/weaver/weaver-messages.properties
@@ -108,6 +108,12 @@ errorLoadingXLintDefault=problem loading XlintDefault.properties, {0}
 invalidXLintKey=invalid Xlint key: {0}
 invalidXLintMessageKind=invalid Xlint message kind (must be one of ignore, warning, error): {0}
 
+# Binding of formals
+unboundFormalInPC=the parameter {0} is not bound in [all branches of] pointcut
+ambiguousBindingInPC=the binding of parameter {0} is ambiguous in pointcut
+ambiguousBindingInOrPC=ambiguous binding of parameter(s) {0} across ''||'' in pointcut
+negationDoesntAllowBinding=cannot bind a parameter in a negated expression
+
 # Java5 
 
 # Enum
