--- a/branches/AspectJ5_Development/org.aspectj/modules/weaver/.classpath
+++ b/branches/AspectJ5_Development/org.aspectj/modules/weaver/.classpath
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-    <classpathentry kind="src" path="src"/>
-    <classpathentry kind="src" path="testsrc"/>
-    <classpathentry kind="var" path="JRE_LIB" rootpath="JRE_SRCROOT" sourcepath="JRE_SRC"/>
-    <classpathentry kind="src" path="/runtime"/>
-    <classpathentry kind="lib" path="/lib/bcel/bcel.jar"
-        rootpath="bcel-5.0/src/java" sourcepath="/lib/bcel/bcel-src.zip"/>
-    <classpathentry kind="lib" path="/lib/junit/junit.jar" sourcepath="/lib/junit/src.jar"/>
-    <classpathentry kind="src" path="/util"/>
-    <classpathentry kind="src" path="/testing-util"/>
-    <classpathentry kind="src" path="/bridge"/>
-    <classpathentry kind="src" path="/asm"/>
-    <classpathentry kind="output" path="bin"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="testsrc"/>
+	<classpathentry sourcepath="JRE_SRC" kind="var" path="JRE_LIB"/>
+	<classpathentry kind="src" path="/runtime"/>
+	<classpathentry sourcepath="/lib/junit/src.jar" kind="lib" path="/lib/junit/junit.jar"/>
+	<classpathentry kind="src" path="/util"/>
+	<classpathentry kind="src" path="/testing-util"/>
+	<classpathentry kind="src" path="/bridge"/>
+	<classpathentry kind="src" path="/asm"/>
+	<classpathentry sourcepath="/lib/bcel/bcel-src.zip" kind="lib" path="/lib/bcel/bcel.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
