--- a/trunk/backport175/build.xml
+++ b/trunk/backport175/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!-- ========================================================================================= -->
-<!--  Copyright (c) Jonas Bonér, Alexandre Vasseur. All rights reserved.                       -->
+<!--  Copyright (c) Jonas Boner, Alexandre Vasseur. All rights reserved.                       -->
 <!--  http://backport175.codehaus.org                                                          -->
 <!--  =======================================================================================  -->
 <!--  The software in this package is published under the terms of Apache License Version 2.0  -->
