--- a/trunk/backport175/src/test/annotation.properties
+++ b/trunk/backport175/src/test/annotation.properties
@@ -1,8 +1,8 @@
-Simple                          =test.annotation.Annotations$Simple
+Simple                          =test.annotation.Annotations.Simple
 SimpleNested                    =test.annotation.Annotations$SimpleNested
-NestedAnnotation                =test.annotation.Annotations$NestedAnnotation
+NestedAnnotation                =test.annotation.Annotations.NestedAnnotation
 NestedAnnotationArray           =test.annotation.Annotations$NestedAnnotationArray
 DefaultString                   =test.annotation.Annotations$DefaultString
-Complex                         =test.annotation.Annotations$Complex
+Complex                         =test.annotation.Annotations.Complex
 StringArray                     =test.annotation.Annotations$StringArray
 LongArray                       =test.annotation.Annotations$LongArray
