--- a/trunk/backport175/src/test/annotation.properties
+++ b/trunk/backport175/src/test/annotation.properties
@@ -1,12 +1,12 @@
-Simple                          =test.annotation.Annotations.Simple
-SimpleNested                    =test.annotation.Annotations$SimpleNested
-NestedAnnotation                =test.annotation.Annotations$NestedAnnotation
-NestedAnnotationArray           =test.annotation.Annotations$NestedAnnotationArray
-DefaultString                   =test.annotation.Annotations$DefaultString
-Complex                         =test.annotation.Annotations$Complex
-StringArray                     =test.annotation.Annotations$StringArray
-LongArray                       =test.annotation.Annotations$LongArray
+Simple                          =test.annotation.TestAnnotations.Simple
+SimpleNested                    =test.annotation.TestAnnotations$SimpleNested
+NestedAnnotation                =test.annotation.TestAnnotations$NestedAnnotation
+NestedAnnotationArray           =test.annotation.TestAnnotations$NestedAnnotationArray
+DefaultString                   =test.annotation.TestAnnotations$DefaultString
+Complex                         =test.annotation.TestAnnotations$Complex
+StringArray                     =test.annotation.TestAnnotations$StringArray
+LongArray                       =test.annotation.TestAnnotations$LongArray
 
 # this one will be rejected since the annotation is already mapped to a name
-#AliasedLongArray               =test.annotation.Annotations.LongArray
+#AliasedLongArray               =test.annotation.TestAnnotations.LongArray
 
