--- a/trunk/backport175/src/test/annotation.properties
+++ b/trunk/backport175/src/test/annotation.properties
@@ -1,11 +1,11 @@
-Simple                          =test.annotation.TestAnnotations.Simple
-SimpleNested                    =test.annotation.TestAnnotations$SimpleNested
-NestedAnnotation                =test.annotation.TestAnnotations$NestedAnnotation
-NestedAnnotationArray           =test.annotation.TestAnnotations$NestedAnnotationArray
-DefaultString                   =test.annotation.TestAnnotations$DefaultString
-Complex                         =test.annotation.TestAnnotations$Complex
-StringArray                     =test.annotation.TestAnnotations$StringArray
-LongArray                       =test.annotation.TestAnnotations$LongArray
+Simple                          =test.reader.TestAnnotations.Simple
+SimpleNested                    =test.reader.TestAnnotations$SimpleNested
+NestedAnnotation                =test.reader.TestAnnotations$NestedAnnotation
+NestedAnnotationArray           =test.reader.TestAnnotations$NestedAnnotationArray
+DefaultString                   =test.reader.TestAnnotations$DefaultString
+Complex                         =test.reader.TestAnnotations$Complex
+StringArray                     =test.reader.TestAnnotations$StringArray
+LongArray                       =test.reader.TestAnnotations$LongArray
 
 # this one will be rejected since the annotation is already mapped to a name
 #AliasedLongArray               =test.annotation.TestAnnotations.LongArray
