--- a/trunk/backport175/build.xml
+++ b/trunk/backport175/build.xml
@@ -176,7 +176,7 @@
         </java>
         <antcall target="testJava5"/>
     </target>
-    <target name="testJava5">
+    <target name="testJava5"  if="java5">
         <java fork="true" classname="test.java5.AllTests">
             <classpath>
                 <path refid="project.class.path"/>
