--- a/backport175/build.xml
+++ b/backport175/build.xml
@@ -35,6 +35,7 @@
         <property name="basedir" value="."/>
         <property name="src.dir" value="${basedir}/src"/>
         <property name="test.src.dir" value="${basedir}/src/test"/>
+        <property name="testcompiler.src.dir" value="${basedir}/src/testcompiler"/>
         <property name="testJava5.src.dir" value="${basedir}/src/testJava5"/>
         <property name="build.dir" value="${basedir}/target"/>
         <property name="lib.dir" value="${basedir}/lib"/>
@@ -56,6 +57,7 @@
         <property name="lib.dir" value="${basedir}/lib"/>
         <property name="main.classes" value="${build.dir}/classes"/>
         <property name="test.classes" value="${build.dir}/test-classes"/>
+        <property name="testcompiler.classes" value="${build.dir}/testcompiler-classes"/>
         <property name="testJava5.classes" value="${build.dir}/testJava5-classes"/>
         <property name="samples.classes" value="${build.dir}/samples-classes"/>
         <property environment="env"/>
@@ -69,12 +71,14 @@
     <target name="clean" depends="init">
         <delete dir="${main.classes}"/>
         <delete dir="${test.classes}"/>
+        <delete dir="${testcompiler.classes}"/>
         <delete dir="${testJava5.classes}"/>
         <delete dir="${samples.classes}"/>
         <delete dir="${build.dir}"/>
         <mkdir dir="${build.dir}"/>
         <mkdir dir="${main.classes}"/>
         <mkdir dir="${test.classes}"/>
+        <mkdir dir="${testcompiler.classes}"/>
         <mkdir dir="${testJava5.classes}"/>
         <mkdir dir="${samples.classes}"/>
     </target>
@@ -104,6 +108,15 @@
                 <path refid="project.class.path"/>
             </classpath>
         </javac>
+
+        <javac destdir="${testcompiler.classes}" debug="on">
+            <src path="${testcompiler.src.dir}"/>
+            <classpath>
+                <pathelement path="${main.classes}"/>
+                <path refid="project.class.path"/>
+            </classpath>
+        </javac>
+
         <!-- remap ASM since it is used directly in the tests for some -->
         <jarjar destfile="${test.classes}.jar">
             <fileset dir="${test.classes}" includes="**/*"/>
@@ -113,6 +126,7 @@
 
         <antcall target="compile:testJava5"/>
     </target>
+
     <target name="compile:testJava5" if="java5">
         <mkdir dir="${testJava5.classes}"/>
         <javac destdir="${testJava5.classes}" debug="on">
@@ -174,8 +188,15 @@
                 <pathelement path="${test.classes}"/>
             </classpath>
         </java>
+        <java fork="true" classname="test.AllCompilerTests">
+            <classpath>
+                <path refid="project.class.path"/>
+                <pathelement path="${testcompiler.classes}"/>
+            </classpath>
+        </java>
         <antcall target="testJava5"/>
     </target>
+
     <target name="testJava5"  if="java5">
         <java fork="true" classname="test.java5.AllTests">
             <classpath>
