added tests for primitives (caught one bug) + refact some

--- a/backport175/src/test/reader/annotation.properties
+++ b/backport175/src/test/reader/annotation.properties
@@ -1,12 +1,12 @@
-Simple                          =test.reader.TestAnnotations.Simple
-SimpleNested                    =test.reader.TestAnnotations$SimpleNested
-NestedAnnotation                =test.reader.TestAnnotations$NestedAnnotation
-NestedAnnotationArray           =test.reader.TestAnnotations$NestedAnnotationArray
-DefaultString                   =test.reader.TestAnnotations$DefaultString
-Complex                         =test.reader.TestAnnotations$Complex
-StringArray                     =test.reader.TestAnnotations$StringArray
-LongArray                       =test.reader.TestAnnotations$LongArray
+Simple                          =test.TestAnnotations.Simple
+SimpleNested                    =test.TestAnnotations$SimpleNested
+NestedAnnotation                =test.TestAnnotations$NestedAnnotation
+NestedAnnotationArray           =test.TestAnnotations$NestedAnnotationArray
+DefaultString                   =test.TestAnnotations$DefaultString
+Complex                         =test.TestAnnotations$Complex
+StringArray                     =test.TestAnnotations$StringArray
+LongArray                       =test.TestAnnotations$LongArray
 
 # this one will be rejected since the annotation is already mapped to a name
-#AliasedLongArray               =test.annotation.TestAnnotations.LongArray
+#AliasedLongArray               =test.TestAnnotations.LongArray
 
