--- a/backport175/build.xml
+++ b/backport175/build.xml
@@ -31,7 +31,7 @@
     <!-- =================================================== -->
     <target name="init">
         <property name="name" value="backport175"/>
-        <property name="version" value="1.0-beta1"/>
+        <property name="version" value="1.0.RC1"/>
         <property name="basedir" value="."/>
         <property name="src.dir" value="${basedir}/src"/>
         <property name="test.reader.src.dir" value="${basedir}/src/test/reader"/>
