--- a/trunk/eclipse/org.codehaus.backport175.ide.eclipse.core/build.properties
+++ b/trunk/eclipse/org.codehaus.backport175.ide.eclipse.core/build.properties
@@ -6,4 +6,4 @@ bin.includes = plugin.xml,\
                lib/*.jar,\
                LICENSE.txt
 jars.compile.order = backport175-eclipse.jar
-jars.extra.classpath = lib/backport175-1.0-beta1.jar
+jars.extra.classpath = lib/backport175-1.0.RC1.jar
